objects/CIF_Upcharge_Reference_Table__c.object
<CustomObject>
    <description>Reference tables to perform CIF Upcharge calculations.</description>
    <fields>
        <fullName>CIFUpcharge__c</fullName>
        <description>CIF Upcharge that should be used based on match parameters.</description>
        <label>CIFUpcharge</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CountryID__c</fullName>
        <description>Country value from the backend data table.</description>
        <label>CountryID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemPackID__c</fullName>
        <description>Item Pack from the backend table.</description>
        <label>ItemPackID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemSizeID__c</fullName>
        <description>Item Size from the backend table.</description>
        <label>ItemSizeID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>CIF Upcharge Reference Table</label>
    <nameField>
        <label>CIF Upcharge Reference Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIF Upcharge Reference Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>